Closed
Bug 1271955
Opened 9 years ago
Closed 9 years ago
Strip leading and trailing C0 controls and space for urls passed to new URL()
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla49
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: 446240525, Assigned: valentin)
Details
(Whiteboard: [necko-active] btpp-active)
Attachments
(1 file)
|
11.77 KB,
patch
|
mcmanus
:
review+
|
Details | Diff | Splinter Review |
>new URL("\0http://mozilla.org\1")
TypeError: is not a valid URL // \0 and \1 should be stripped first
spec: https://url.spec.whatwg.org/#concept-basic-url-parser
Comment 1•9 years ago
|
||
Seems like we might call into the wrong entry point for the URL parser?
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → valentin.gosu
Whiteboard: [necko-active]
Updated•9 years ago
|
Whiteboard: [necko-active] → [necko-active] btpp-active
| Assignee | ||
Comment 2•9 years ago
|
||
| Assignee | ||
Comment 3•9 years ago
|
||
| Assignee | ||
Comment 4•9 years ago
|
||
| Assignee | ||
Comment 5•9 years ago
|
||
MozReview-Commit-ID: B7BiKE6P7GA
Attachment #8754426 -
Flags: review?(mcmanus)
Comment 6•9 years ago
|
||
Comment on attachment 8754426 [details] [diff] [review]
Strip leading and trailing C0 controls and space for urls passed to new URL()
Review of attachment 8754426 [details] [diff] [review]:
-----------------------------------------------------------------
thanks for taking this on
Attachment #8754426 -
Flags: review?(mcmanus) → review+
| Assignee | ||
Comment 7•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/a10683e0ed001963fcf87a55d42b9e189fd4f481
Bug 1271955 - Strip leading and trailing C0 controls and space for urls passed to new URL() r=mcmanus
| Assignee | ||
Comment 8•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/08111f812323056882d6d2eec909c379109cc863
Bug 1271955 - Fix web-platform test a=testonly CLOSED TREE
Comment 9•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/a10683e0ed00
https://hg.mozilla.org/mozilla-central/rev/08111f812323
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox49:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•