Bug 1271955 - Strip leading and trailing C0 controls and space for urls passed to new URL() r=mcmanus

MozReview-Commit-ID: B7BiKE6P7GA